--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,7 @@ http {
         }
 
         # ---- Frontend Remember ----
-        location /remember/ {
+        location / {
             alias /app/FrontEnd/remember/;
             index index.html;
         }
