--- a/nginx.conf
+++ b/nginx.conf
@@ -50,9 +50,9 @@ http {
             add_header Content-Type application/json;
             return 200 '{"status":"online","output":"Welcome to the HamzaYslmn API Service! 🏔️","message":"Or perhaps you\'re looking for the answer to the ultimate question of life, the universe, and everything? 🌌"}';
         }
-        
+
         # ---- Frontend Remember ----
-        location / {
+        location /i-remember/ {
             alias /app/FrontEnd/remember/;
             index index.html;
         }
