--- a/nginx.conf
+++ b/nginx.conf
@@ -35,11 +35,10 @@ http {
     server {
         listen 8080;
 
-        # Serve space at root
+        # ---- Frontend Remember ----
         location / {
-            default_type text/plain; # veya text/html
-            add_header Content-Type "text/plain; charset=utf-8" always;
-            return 200 "🌌";
+            alias /app/FrontEnd/remember/;
+            index index.html;
         }
 
         location /status {
@@ -51,10 +50,10 @@ http {
             return 200 '{"status":"online","output":"Welcome to the HamzaYslmn API Service! 🏔️","message":"Or perhaps you\'re looking for the answer to the ultimate question of life, the universe, and everything? 🌌"}';
         }
 
-        # ---- Frontend Remember ----
-        location /i-remember/ {
-            alias /app/FrontEnd/remember/;
-            index index.html;
+        location /space {
+            default_type text/plain; # veya text/html
+            add_header Content-Type "text/plain; charset=utf-8" always;
+            return 200 "🌌";
         }
 
         # Proxy to Backend API
