root test change, release

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,8 +37,9 @@ http {
 
         # ---- Frontend Remember ----
         location / {
-            alias /app/FrontEnd/remember/;
+            root /app/FrontEnd/remember;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location /status {
