testing spa fallback, release

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
 
         # ---- Frontend Remember ----
         location / {
-            root /app/FrontEnd/remember;
+            alias /app/FrontEnd/remember/;
             index index.html;
             try_files $uri $uri/ /index.html;
         }
