--- a/nginx.conf
+++ b/nginx.conf
@@ -59,8 +59,8 @@ http {
 
         # Proxy to Backend API
         location /api/ {
-            limit_req zone=req_limit_per_sec burst=1 nodelay;
-            limit_req zone=req_limit_per_min burst=60 nodelay;
+            #limit_req zone=req_limit_per_sec burst=1 nodelay;
+            #limit_req zone=req_limit_per_min burst=60 nodelay;
 
             proxy_pass http://127.0.0.1:8001/api/;
             
